--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -54,7 +54,7 @@ i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )
 پانی منجمد ہونے کے درجہ حرارت یعنی \عددی{\SI{0}{\celsius}} پر
 \item
 
-تئیس ڈگری سیلسیئس یعنی \عددی{\SI{23}{\celsius}}  پر
+تئیس ڈگری سیلسیئس یعنی \عددی{\SI{27}{\celsius}}  پر
 \end{enumerate}
 
 
@@ -71,15 +71,15 @@ V_T =\frac{k T}{q} =\frac{1.38 \times 10^{-23} \times 373}{1.6 \times 10^{-19}}=
 \item
 پانی صفر ڈگری سیلسیئس یعنی \عددی{\SI{273}{\kelvin}} پر منجمد ہوتا ہے۔اس حرارت پر
 \begin{align*}
-V_T=\frac{k T}{q}=\frac{1.38 \times 10^{-23} \times 273}{1.6 \times 10^{-19}}=\SI{0.0237}{V}
+V_T=\frac{k T}{q}=\frac{1.38 \times 10^{-23} \times 273}{1.6 \times 10^{-19}}=\SI{0.0236}{V}
 \end{align*}
-یعنی \عددی{\SI{23.7}{\milli V}} کے برابر ہے۔
+یعنی \عددی{\SI{23.6}{\milli V}} کے برابر ہے۔
 \item
 تئیس ڈگری سیلسیئس جسے عام زندگی کا رہائشی درجہ حرارت لیا جاتا ہے پر حرارتی برقی دباو کی قیمت 
 \begin{align*}
-V_T=\frac{k T}{q}=\frac{1.38 \times 10^{-23} \times 300}{1.6 \times 10^{-19}}=\SI{0.0258}{V}
+V_T=\frac{k T}{q}=\frac{1.38 \times 10^{-23} \times 300}{1.6 \times 10^{-19}}=\SI{0.0259}{V}
 \end{align*}
-یعنی  \عددی{\SI{25.8}{\milli V}} ہے۔
+یعنی  \عددی{\SI{25.9}{\milli V}} ہے۔
 \end{enumerate}
 عام طور ڈایوڈ کی مساوات میں حرارتی برقی دباو کو \عددی{\SI{25}{\milli V}} لیا جاتا ہے جسے یاد رکھنا قدرِ آسان ہے یعنی
 \begin{align}
@@ -103,9 +103,9 @@ $i_D=\SI{100}{\milli A}$
 \item
 $v_D=V_T \ln \left (\frac{i_D}{I_S}+1 \right ) =0.025 \times \ln \left (\frac{1 \times 10^{-3}}{5.1 \times 10^{-15}}+1 \right ) =\SI{0.65}{V}$
 \item
-$v_D=V_T \ln \left (\frac{i_D}{I_S}+1 \right ) =0.025 \times \ln \left (\frac{10 \times 10^{-3}}{5.1 \times 10^{-15}}+1 \right ) =\SI{0.707}{V}$
+$v_D=V_T \ln \left (\frac{i_D}{I_S}+1 \right ) =0.025 \times \ln \left (\frac{10 \times 10^{-3}}{5.1 \times 10^{-15}}+1 \right ) =\SI{0.708}{V}$
 \item
-$v_D=V_T \ln \left (\frac{i_D}{I_S}+1 \right ) =0.025 \times \ln \left (\frac{100 \times 10^{-3}}{5.1 \times 10^{-15}}+1 \right ) =\SI{0.767}{V}$
+$v_D=V_T \ln \left (\frac{i_D}{I_S}+1 \right ) =0.025 \times \ln \left (\frac{100 \times 10^{-3}}{5.1 \times 10^{-15}}+1 \right ) =\SI{0.765}{V}$
 \end{enumerate}
 \انتہا{مثال}
 %===========
@@ -149,15 +149,15 @@ $v_D=\SI{-0.1}{\volt}$
 \begin{enumerate}
 \item
 $
-i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )=I_S \left (e^{-\frac{10}{0.025}} \right )=I_S \left(e^{-400}-1 \right ) \approx I_S
+i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )=I_S \left (e^{-\frac{10}{0.025}} -1\right )=I_S \left(e^{-400}-1 \right ) \approx -I_S
 $
 \item
 $
-i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )=I_S \left (e^{-\frac{1}{0.025}} \right ) =I_S \left (e^{-40}-1 \right ) \approx I_S
+i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )=I_S \left (e^{-\frac{1}{0.025}} -1\right ) =I_S \left (e^{-40}-1 \right ) \approx -I_S
 $
 \item
 $
-i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )=I_S \left (e^{-\frac{0.1}{0.025}} \right ) =I_S \left (e^{-4}-1 \right ) \approx I_S
+i_D=I_S \left (e^{\frac{v_D}{V_T}}-1 \right )=I_S \left (e^{-\frac{0.1}{0.025}}-1 \right ) =I_S \left (e^{-4}-1 \right ) \approx -I_S
 $
 \end{enumerate}
 
@@ -165,7 +165,7 @@ $
 \انتہا{مثال}
 %============
 \ابتدا{مثال}\شناخت{مثال_ڈایوڈ_الٹے_مائل_برقی_رو_لبریزی_ہے}
-\عددی{I_S} کی قیمت درجہ حرارت بڑھنے  \عددی{\SI{15}{\percent}} فی کیلون بڑھتی ہے۔\عددی{\SI{5}{\celsius}} درجہ حرارت بڑھنے سے \عددی{I_S} کی قیمت کتنی ہو جائے گی۔
+\عددی{I_S} کی قیمت درجہ حرارت بڑھنے سے  \عددی{\SI{15}{\percent}} فی کیلون بڑھتی ہے۔\عددی{\SI{5}{\celsius}} درجہ حرارت بڑھنے سے \عددی{I_S} کی قیمت کتنی ہو جائے گی۔
 
 حل:درجہ حرارت \عددی{\SI{1}{\celsius}} بڑھنے سے نئی قیمت \عددی{1.15 I_S} ہو جائے گی۔مزید \عددی{\SI{1}{\celsius}} بڑھنے سے  \عددی{I_S} مزید \عددی{\SI{15}{\percent}} بڑھ کر \عددی{1.15 \times 1.15 I_S} یعنی \عددی{1.15^2 I_S} ہو جائے گی۔یوں \عددی{\SI{5}{\celsius}} بڑھنے سے
 \begin{align*}
@@ -304,9 +304,9 @@ $i=\frac{v_I}{R}=\frac{1.2}{1000}=\SI{1.2}{\milli \ampere}$
 اب \عددی{v_D=\SI{0.7}{\volt}} لیتے ہوئے دوبارہ حل کرتے ہیں۔
 \begin{enumerate}
 \item
-$i=\frac{v_I}{R}=\frac{22.9-0.7}{1000}=\SI{22.2}{\milli \ampere}$
+$i=\frac{v_I-0.7}{R}=\frac{22.9-0.7}{1000}=\SI{22.2}{\milli \ampere}$
 \item
-$i=\frac{v_I}{R}=\frac{1.2-0.7}{1000}=\SI{0.5}{\milli \ampere}$
+$i=\frac{v_I-0.7}{R}=\frac{1.2-0.7}{1000}=\SI{0.5}{\milli \ampere}$
 \end{enumerate}
 
 \انتہا{مثال}
@@ -1160,7 +1160,7 @@ r_d = \left . \left(\od{i_D}{v_D} \right )^{-1} \right|_{I_{DQ}}=\frac{V_T}{I_{D
 
 حل:	مساوات \حوالہ{مساوات_ڈایوڈ_کی_مزاحمت_کا_رو_سے_حصول}  کے تحت \عددی{i_D=15 mA} پر
 \begin{align}
-r_d =\frac{25 \times 10^{-3}}{15 \times 10^{-3}}=\SI{1.666}{\ohm}
+r_d =\frac{25 \times 10^{-3}}{15 \times 10^{-3}}=\SI{1.667}{\ohm}
 \end{align}
 اور \عددی{i_D=\SI{25}{\micro \ampere}} پر
 \begin{align}
