--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -95,7 +95,7 @@ v_0 &=A_d \times v_d \\
 v_0 &=A_d \times v_d \\
 &=A_d \times \left (v_2 - v_1 \right )\\
 &=100000 \times \left(2.00005-2.00003 \right )\\
-&=\SI{2}{\volt}
+&\approx \SI{2}{\volt}
 \end{aligned}$
 
 \item $\begin{aligned}[t]
@@ -272,7 +272,7 @@ v_o=\frac{\num{10000001}}{101} v_d
 \end{align*}
  اور یوں
 \begin{align*}
-v_o=\SI{-10.00111}{\volt  \volt}
+v_o=\SI{-10.00111}{\volt}
 \end{align*}
 حاصل ہوتا ہے۔
 \item
@@ -288,9 +288,9 @@ v_o=\frac{-A_d v_s}{1+\frac{R_1}{R_2}\left(1+A_d \right)}
 \end{align}
 یعنی
 \begin{align*}
-v_o=\frac{-\num{100000} v_s}{1+\frac{\num{1000}}{\num{10000}}\left(1+\num{100000} \right)}=\SI{-9.9989}{\volt\per \volt}
+v_o=\frac{-\num{100000} v_s}{1+\frac{\num{1000}}{\num{10000}}\left(1+\num{100000} \right)}=\SI{-9.9989}{\volt}
 \end{align*}
-حاصل ہوتا ہے۔
+حاصل ہوتا ہے جہاں \عددی{v_s=\SI{1}{\volt}} پُر کیا گیا ہے۔
 \item
 پہلے جواب کی نسبت سے دیکھتے ہوئے دونوں جوابات میں صرف
 \begin{align*}
@@ -313,8 +313,8 @@ v_o=\frac{-A_d v_s}{1+\frac{R_1}{R_2}\left(1+A_d \right)} \approx \frac{-A_d v_s
 جب بھی حسابی ایمپلیفائر کے ساتھ بیرونی جڑے مزاحمت کی قیمت \عددی{R_i} سے بہت کم اور \عددی{R_o} سے بہت زیادہ ہو، ایسی صورت میں غیر کامل اور کامل مساوی ادوار دونوں کے استعمال سے یکساں جوابات حاصل ہوتے ہیں۔چونکہ کامل دور استعمال کرتے ہوئے جواب زیادہ آسانی سے حاصل ہوتا ہے لہٰذا ایسی صورت میں کامل مساوی دور (ریاضی نمونہ) ہی استعمال کیا جاتا ہے۔مزید یہ کہ \عددی{A_d \to \infty} تصور کرنے سے مسئلہ حل کرنا نہایت آسان ہو جاتا ہے۔ان تین حقائق کو یہاں بیان کرتے ہیں۔
 \begin{gather}
 \begin{aligned} \label{مساوات_حسابی_کامل_دور_یقینی}
-R_{\textup{بیرونی}}&<< R_i\\
-R_{\textup{بیرونی}}&>> R_o\\
+R_{\textup{بیرونی}}&\ll R_i\\
+R_{\textup{بیرونی}}&\gg R_o\\
 A_d & \to \infty
 \end{aligned}
 \end{gather}
@@ -802,7 +802,7 @@ v_s = 0.33 \cos (\omega t)
 \end{enumerate}
 حل:	مساوات  \حوالہ{مساوات_مثبت_افزائش} سے اس مثبت ایمپلیفائر کی افزائش حاصل کرتے ہیں۔
 \begin{align*}
-A_v = \left (1+\frac{15000}{2} \right )=\SI{8.5}{\volt \per \volt}
+A_v = \left (1+\frac{15000}{2000} \right )=\SI{8.5}{\volt \per \volt}
 \end{align*}
 یوں
 \begin{enumerate}
@@ -867,7 +867,7 @@ v_m = \frac{10 \times 10^{6} \times 100 \times 10^{-3}}{10 \times 10^{6}+5 \time
 \end{align*}
 پڑھے گا۔آپ دیکھ سکتے ہیں کہ یہ نا قابل قبول صورت حال ہے۔
 
-مبدل توانائی تخلیق دیتے وقت کوشش کی جاتی ہے کہ اس کے تھونن مساوی مزاحمت \عددی{R_S} کی قیمت کم سے کم ہو۔اسی طرح پیمایشی آلہ تخلیق دیتے وقت کوشش کی جاتی ہے کہ اس کے داخل مزاحمت \عددی{R_M} کی قیمت زیادہ سے زیادہ ہو۔یوں آپ دیکھ سکتے ہیں کہ اگر \عددی{R_M >> R_S} ہو تب \عددی{v_m \approx v_s} ہو گا۔
+مبدل توانائی تخلیق دیتے وقت کوشش کی جاتی ہے کہ اس کے تھونن مساوی مزاحمت \عددی{R_S} کی قیمت کم سے کم ہو۔اسی طرح پیمایشی آلہ تخلیق دیتے وقت کوشش کی جاتی ہے کہ اس کے داخل مزاحمت \عددی{R_M} کی قیمت زیادہ سے زیادہ ہو۔یوں آپ دیکھ سکتے ہیں کہ اگر \عددی{R_M \gg R_S} ہو تب \عددی{v_m \approx v_s} ہو گا۔
 
 آپ دیکھ سکتے ہیں کہ پیمایشی آلے کی داخلی مزاحمت مبدل توانائی پر بوجھ ڈالتی ہے جس سے مبدل کے بیرونی سروں پر میسر اشارے کی قیمت میں کمی رونما ہوتی ہے۔یوں بوجھ کو ہلکا کرنے کی خاطر \عددی{R_M} کی قیمت بڑھانی ہو گی۔اس مثال میں مبدل توانائی کو پیمایشی آلہ بطور \اصطلاح{برقی بوجھ} \حاشیہب{load}  نظر آتا ہے۔یہ بوجھ جتنا کم ہو اتنا بہتر ہو گا۔
 
@@ -1354,7 +1354,7 @@ v_{o1}&=4-0.003 \sin \omega t -0.6 \sin \omega t\\
 \begin{align*}
 &\frac{v_k-v_{o2}}{R_3}+\frac{v_k}{R_4}=0\\
 v_k&=\left(\frac{R_4}{R_3+R_4} \right) v_{o2}\\
-&=2+0.2015 \sin \omega t
+&=2+0.3015 \sin \omega t
 \end{align*}
 حاصل ہوتا ہے۔\عددی{v_n} اور \عددی{v_k} برابر ہونے کی وجہ سے \عددی{v_n} بھی یہی ہو گا۔مندرجہ بالا جواب \عددی{R_3} اور \عددی{R_4} کو سلسلہ وار \عددی{v_{o2}} اور برقی زمین کے مابین جڑا تصور کرتے ہوئے برقی دباو کے تقسیم کی مساوات سے بھی حاصل ہوتا ہے۔منفی کار کا خارجی اشارہ
 \begin{align*}
@@ -1366,7 +1366,7 @@ v_o&=\frac{R_4}{R_3}{\left(v_{o2}-v_{o1} \right)}\\
 
 چونکہ خارجی اشارے میں مشترکہ اشارے کا نام و نشان تک نہیں لہٰذا مشترکہ افزائش صفر کے برابر ہے یعنی \عددی{A_m=0} جبکہ تفرقی افزائش کو مندرجہ بالا مساوات سے یوں حاصل کیا جا سکتا ہے۔
 \begin{align*}
-A_d=\frac{v_o}{v_d}=\frac{1.206 \sin \omega t}{0.06 \sin \omega t}=201
+A_d=\frac{v_o}{v_d}=\frac{1.206 \sin \omega t}{0.06 \sin \omega t}=20.1 \, \si{\volt\per\volt}
 \end{align*}
 اس طرح مشترکہ اشارہ رد کرنے کی صلاحیت
 \begin{align*}
@@ -1676,7 +1676,7 @@ V_{CC} =\SI{12}{\volt} \hspace{1cm} V_{EE}=\SI{-12}{\volt} \hspace{1cm} V_{OS}=\
 \begin{align*}
  \left(+12-(-12) \right ) \times \left (\frac{R_4}{R_3+R_4+R_5} \right )&=0.004\\
  24 \times \left ( \frac{R_4}{200000+R_4} \right )&=0.004\\
- R_4 &= \SI{33}{\ohm}
+ R_4 &= \SI{33.34}{\ohm}
 \end{align*}
 ہم اس سے قدر زیادہ مزاحمت منتخب کرتے ہیں مثلاً \عددی{R_4 =\SI{100}{\ohm}}۔
 
@@ -1767,7 +1767,7 @@ V_O=-I_{B2}R+I_{B1}R=\left (I_{B1}-I_{B2} \right )R
 \end{align}
 حاصل ہوتا ہے۔اگرچہ اس صورت میں \عددی{V_O=0} حاصل نہیں ہو گا مگر چونکہ
 \begin{align*}
-\abs{I_{B1}-I_{B2}} << I_B
+\abs{I_{B1}-I_{B2}} \ll I_B
 \end{align*} 
 ہوتا ہے لہٰذا مساوات \حوالہ{مساوات_انحرافی_رو_سے_پیدا_درست_دباو} سے حاصل \عددی{V_O} کی قیمت مساوات \حوالہ{مساوات_انحرافی_رو_سے_پیدا_دباو}  سے حاصل \عددی{V_O} کی قیمت سے زیادہ بہتر (یعنی کم) ہے۔
 %=========
@@ -1829,7 +1829,7 @@ R=\frac{R_1 R_2}{R_1+R_2}
 \begin{align}
 V_O=\left (I_{B1}-I_{B2} \right )R_2
 \end{align}
-حاصل ہوتا ہے۔یوں اس صورت میں اگرچہ داخلی میلان برقی رو کا مسئلہ پوری طرح حل نہیں ہوتا لیکن مساوات \حوالہ{مساوات_انحرافی_دباو_کا_خاتمہ_ب}  کے ساتھ موازنہ کرنے سے (چونکہ \عددی{I_{B1}>>\abs{I_{B1}-I_{B2}}} ہے ) ہم دیکھتے ہیں کہ \عددی{V_O}  میں خاطر خواہ کمی آتی ہے۔
+حاصل ہوتا ہے۔یوں اس صورت میں اگرچہ داخلی میلان برقی رو کا مسئلہ پوری طرح حل نہیں ہوتا لیکن مساوات \حوالہ{مساوات_انحرافی_دباو_کا_خاتمہ_ب}  کے ساتھ موازنہ کرنے سے (چونکہ \عددی{I_{B1}\gg\abs{I_{B1}-I_{B2}}} ہے ) ہم دیکھتے ہیں کہ \عددی{V_O}  میں خاطر خواہ کمی آتی ہے۔
 
 \انتہا{مثال}
 
