--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -6,7 +6,7 @@
 
 یہ کتاب \تحریر{Ubuntu} استعمال  کرتے ہوئے \تحریر{XeLatex} میں تشکیل دی گئی۔پرزہ جات کے خط \تحریر{Octave} جبکہ ادوار کو \تحریر{gEDA} کی مدد سے بنایا گیا ہے۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان سافٹ ویر لکھنے والوں کا دل سے شکر گزار ہوں۔میں طلبہ و طالبات سے گزارش  کرتا ہوں کہ وہ آگے بڑھیں اور اس قسم کے سافٹ ویر لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
 
-میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کے مکمل ہونے میں میری مدد کی۔ 
+اس کتاب کو پہلی مرتبہ بطور نسابی کتاب جن طلباء و طالبات نے پڑھا ان کے نام طلحا ذاہد، عبد اللّہ رضا، عائشہ رباب، سمیا الرحمان، صبح صادق اور فیصل پرویز ہیں۔انہوں نے کتاب کو درست کرنے میں میری مدد کی جس کا میں شکر گزار ہوں۔
 
 آپ سے التماس ہے کہ اس کتاب کو زیادہ سے زیادہ طلبہ و طالبات تک پہنچائیں اور اس میں غلطیوں کی نشاندہی میرے ای میل پتہ پر کریں۔
 \vspace{5mm}
