--- a/tex/electronicsSymbols.tex
+++ b/tex/electronicsSymbols.tex
@@ -52,13 +52,13 @@
 برقی دباو & \تحریر{voltage}\\
 برقی رو & \تحریر{current} \\
 برقی مزاحمت & \تحریر{resistance} \\
-کپیسٹر & \تحریر{capacitor} \\
-امالہ & \تحریر{inductor} \\
+برق گیر (کپیسٹر) & \تحریر{capacitor} \\
+امالہ گیر & \تحریر{inductor} \\
 برقی رکاوٹ & \تحریر{impedance} \\
 منبع برقی دباو & \تحریر{voltage source}\\
 منبع برقی رو & \تحریر{current source} \\
 تابع منبع برقی دباو & \تحریر{dependent voltage source} \\
-آزاد منبع برقی دباو & \تحریر{independent voltage source} \\
+غیر تابع منبع برقی دباو & \تحریر{independent voltage source} \\
 حسابی ایمپلیفائر & \تحریر{OPAMP}\\
 تفرقی جوڑا & \تحریر{difference pair} \\
 اشارہ & \تحریر{signal} \\
