maths checking 300 pages done

--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -992,7 +992,7 @@ V_{C2}=15-I_{C2} R_{C2}=15 - 50 \times 10^{-6} \times 100 \times 10^{3}=\SI{10}{
 \begin{align*}
 I_{E5}=I_{E6}=\frac{0.6 \times 10^{-3}}{2}=\SI{0.3}{\milli \ampere}
 \end{align*}
-پایا جائے گا۔یوں ان کے بیس پر \عددیء{\tfrac{\SI{0.3}{\micro \ampere}}{\beta}} یعنی \عددیء{\SI{3}{\micro \ampere}} پایا جائے گا۔حقیقت میں \عددیء{\SI{3}{\micro \ampere}} اور \عددیء{\SI{50}{\micro \ampere}} مل کر \عددیء{\SI{100}{\kilo \ohm}} سے گزرتے ہیں۔ہم نے پہلی تفرقی جوڑی میں \عددیء{\SI{3}{\micro \ampere}} کو نظر انداز کیا تھا۔اگر اس کو بھی شامل کیا جائے تب پہلی جوڑی کے کلکٹر پر \عددیء{\SI{9.7}{\volt}} پایا جائے گا۔قلم و کاغذ پر جلد حساب کتاب کرتے وقت عموماً اسی طرح بیس پر پائے جانے والے برقی رو کو نظر انداز کیا جاتا ہے۔ہم اسی لئے اس کو نظر انداز کرتے ہوئے \عددیء{\SI{10}{\volt}} کے جواب کو ہی صحیح تسلیم کرتے ہوئے آگے بڑھتے ہیں۔اس طرح \عددیء{Q_5} اور \عددیء{Q_6} کے ایمٹر پر
+پایا جائے گا۔یوں ان کے بیس پر \عددیء{\tfrac{\SI{0.3}{\milli \ampere}}{\beta}} یعنی \عددیء{\SI{3}{\micro \ampere}} پایا جائے گا۔حقیقت میں \عددیء{\SI{3}{\micro \ampere}} اور \عددیء{\SI{50}{\micro \ampere}} مل کر \عددیء{\SI{100}{\kilo \ohm}} سے گزرتے ہیں۔ہم نے پہلی تفرقی جوڑی میں \عددیء{\SI{3}{\micro \ampere}} کو نظر انداز کیا تھا۔اگر اس کو بھی شامل کیا جائے تب پہلی جوڑی کے کلکٹر پر \عددیء{\SI{9.7}{\volt}} پایا جائے گا۔قلم و کاغذ پر جلد حساب کتاب کرتے وقت عموماً اسی طرح بیس پر پائے جانے والے برقی رو کو نظر انداز کیا جاتا ہے۔ہم اسی لئے اس کو نظر انداز کرتے ہوئے \عددیء{\SI{10}{\volt}} کے جواب کو ہی صحیح تسلیم کرتے ہوئے آگے بڑھتے ہیں۔اس طرح \عددیء{Q_5} اور \عددیء{Q_6} کے ایمٹر پر
 \begin{align*}
 V_{E}=V_{B}-V_{BE}=10-0.7=\SI{9.3}{\volt}
 \end{align*}
