differential gain errorin erro

--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -1652,12 +1652,16 @@ i_{DS2}&=I-i_d
 v_{D1}&=V_{+} - i_{DS1} R_D\\
 v_{D2}&=V_{+}-i_{DS2} R_D
 \end{align*}
-لکھ کر اس میں مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات_الف} استعمال کرتے ہوئے
+اور
 \begin{align*}
-v_o&=v_{D2}-v_{D1}\\
-&=\left(i_{DS1}-i_{DS2} \right) R_D\\
-&=\left[g_m \frac{v_d}{2}-g_m \left(\frac{v_d}{2} \right)) \right]\\
-&=g_m v_d
+v_0&=v_{D2}-v_{D1}\\
+&=(V_{+}-i_{DS2} R_D)-(V_{+} - i_{DS1} R_D)\\
+&=i_{DS1}R_D-i_{DS2} R_D
+\end{align*}
+لکھتے ہوئے  مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات_الف} کے استعمال سے
+\begin{align*}
+v_o&=\left[I+g_m \frac{v_d}{2}\right]R_D-\left[I-g_m \frac{v_d}{2} \right] R_D\\
+&=g_m v_d R_D
 \end{align*}
 ملتا ہے جس سے تفرقی افزائش
 \begin{align}\label{مساوات_تفرقی_بنیادی_جوڑے_کی_افزائش}
